--- a/index.html
+++ b/index.html
@@ -82,11 +82,14 @@
       color: red;
       margin-top: 15px;
     }
+    .status-container {
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 20px;
+    }
     .status {
       display: flex;
-      justify-content: center;
       align-items: center;
-      margin-bottom: 20px;
     }
     .status span {
       margin-left: 10px;
@@ -97,10 +100,10 @@
       height: 20px;
       border-radius: 50%;
     }
-    .online {
+    .online, .started {
       background-color: #4caf50;
     }
-    .offline {
+    .offline, .stopped {
       background-color: #f44336;
     }
   </style>
@@ -121,10 +124,20 @@
 
   <!-- Hauptbereich -->
   <div class="container" style="display: none;">
-    <div class="status">
-      <div id="status-icon" class="status-icon offline"></div>
-      <span id="status-text">Offline</span>
+    <!-- Zwei Status-Anzeigen -->
+    <div class="status-container">
+      <!-- Erster Status: Verbindungsstatus -->
+      <div class="status">
+        <div id="status-icon" class="status-icon offline"></div>
+        <span id="status-text">Offline</span>
+      </div>
+      <!-- Zweiter Status: Betriebsstatus (gestartet/gestoppt) -->
+      <div class="status">
+        <div id="operation-icon" class="status-icon stopped"></div>
+        <span id="operation-text">Gestoppt</span>
+      </div>
     </div>
+    
     <h1>Minecraftserver</h1>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
@@ -188,19 +201,37 @@
       }
     }
 
-    // Funktion zum Abfragen des aktuellen Status (hier kannst du deine Logik ergänzen, falls der Shelly Plug Status abgefragt werden kann)
+    // Funktion zum Abfragen des aktuellen Status des Smart Plugs
     async function checkStatus() {
-      // Statusabfrage kann je nach Gerät und API unterschiedlich implementiert werden.
-      // Hier ein Platzhalter, der den Status anhand einer erfolgreichen Anfrage ändern könnte.
-      // Falls keine Statusabfrage möglich ist, kann dieser Teil auch entfallen.
-      // Für dieses Beispiel setzen wir einfach den Status auf "Online", wenn zuletzt eingeschaltet wurde.
-      // Diesen Platzhalter kannst du durch die korrekte Statusabfrage ersetzen.
-      const statusIcon = document.getElementById("status-icon");
-      const statusText = document.getElementById("status-text");
-      // Beispiel: Wir gehen davon aus, dass "on" als Online gewertet wird.
-      statusIcon.classList.remove("offline");
-      statusIcon.classList.add("online");
-      statusText.innerText = "Online";
+      try {
+        // Annahme: Es gibt einen Status-Endpunkt, der den aktuellen Zustand liefert.
+        // Passe die URL und die Logik (z.B. result.turn) an die tatsächliche API an.
+        const response = await fetch("https://shelly-165-eu.shelly.cloud/device/relay/status/?id=e465b85d8cd8");
+        const result = await response.json();
+        console.log("Statusabfrage:", result);
+
+        // Beispielhafte Logik: Wir gehen davon aus, dass result.turn "on" bzw. true bedeutet,
+        // dass der Smart Plug aktiviert (gestartet) ist.
+        if(result.turn === "on" || result.turn === true) {
+          // Verbindungsstatus
+          document.getElementById("status-icon").classList.remove("offline");
+          document.getElementById("status-icon").classList.add("online");
+          document.getElementById("status-text").innerText = "Online";
+          // Betriebsstatus
+          document.getElementById("operation-icon").classList.remove("stopped");
+          document.getElementById("operation-icon").classList.add("started");
+          document.getElementById("operation-text").innerText = "Gestartet";
+        } else {
+          document.getElementById("status-icon").classList.remove("online");
+          document.getElementById("status-icon").classList.add("offline");
+          document.getElementById("status-text").innerText = "Offline";
+          document.getElementById("operation-icon").classList.remove("started");
+          document.getElementById("operation-icon").classList.add("stopped");
+          document.getElementById("operation-text").innerText = "Gestoppt";
+        }
+      } catch (error) {
+        console.error("Fehler beim Status-Check:", error);
+      }
     }
 
     // Event-Listener für die Buttons
