--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
   <div class="container" style="display: none;">
     <!-- Zwei Status-Anzeigen -->
     <div class="status-container">
-      <!-- Erster Status: Verbindungsstatus -->
+      <!-- Erster Status: Verbindung -->
       <div class="status">
         <div id="status-icon" class="status-icon offline"></div>
         <span id="status-text">Offline</span>
       </div>
-      <!-- Zweiter Status: Betriebsstatus (gestartet/gestoppt) -->
+      <!-- Zweiter Status: Betriebszustand (On/Off) -->
       <div class="status">
         <div id="operation-icon" class="status-icon stopped"></div>
         <span id="operation-text">Gestoppt</span>
@@ -200,35 +200,47 @@
       }
     }
 
-    // Angepasste Statusabfrage: Prüfe den Zustand aus dem "relays"-Array
+    // Überarbeiteter Status-Check:
+    // 1. Es wird versucht, den Status vom Smart Plug abzurufen.
+    //    - Bei Erfolg: Verbindung → Online (grün)
+    //    - Bei Fehler: Verbindung → Offline (rot)
+    // 2. Falls die Verbindung besteht, wird anhand von result.relays[0].ison geprüft,
+    //    ob der Smart Plug eingeschaltet (Gestartet, grün) oder ausgeschaltet (Gestoppt, rot) ist.
     async function checkStatus() {
       try {
         const response = await fetch("https://shelly-165-eu.shelly.cloud/device/status/?id=e465b85d8cd8");
         const result = await response.json();
         console.log("Statusabfrage:", result);
-        
+
+        // Verbindung: Falls wir hier ankommen, ist eine Verbindung vorhanden → Online (grün)
+        document.getElementById("status-icon").classList.remove("offline");
+        document.getElementById("status-icon").classList.add("online");
+        document.getElementById("status-text").innerText = "Online";
+
+        // Betriebszustand: Prüfe anhand des Wertes aus dem relays-Array
         let isOn = false;
-        if (result.relays && result.relays.length > 0) {
+        if(result.relays && result.relays.length > 0) {
           isOn = result.relays[0].ison;
         }
-        
-        if (isOn === true || isOn === "on") {
-          document.getElementById("status-icon").classList.remove("offline");
-          document.getElementById("status-icon").classList.add("online");
-          document.getElementById("status-text").innerText = "Online";
+        if(isOn === true || isOn === "on") {
           document.getElementById("operation-icon").classList.remove("stopped");
           document.getElementById("operation-icon").classList.add("started");
           document.getElementById("operation-text").innerText = "Gestartet";
         } else {
-          document.getElementById("status-icon").classList.remove("online");
-          document.getElementById("status-icon").classList.add("offline");
-          document.getElementById("status-text").innerText = "Offline";
           document.getElementById("operation-icon").classList.remove("started");
           document.getElementById("operation-icon").classList.add("stopped");
           document.getElementById("operation-text").innerText = "Gestoppt";
         }
       } catch (error) {
         console.error("Fehler beim Status-Check:", error);
+        // Bei Fehlern wird angenommen, dass keine Verbindung besteht
+        document.getElementById("status-icon").classList.remove("online");
+        document.getElementById("status-icon").classList.add("offline");
+        document.getElementById("status-text").innerText = "Offline";
+
+        document.getElementById("operation-icon").classList.remove("started");
+        document.getElementById("operation-icon").classList.add("stopped");
+        document.getElementById("operation-text").innerText = "Gestoppt";
       }
     }
 
@@ -243,13 +255,4 @@
       setTimeout(checkStatus, 1000);
     });
 
-    document.getElementById("restart").addEventListener("click", async function() {
-      await schalteShelly(false);
-      setTimeout(async () => {
-        await schalteShelly(true);
-        checkStatus();
-      }, 15000);
-    });
-  </script>
-</body>
-</html>
+    document.getElementById("restart").addEventListener("click", async functi
