--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
       text-align: center;
       border: 2px solid;
     }
+    
+    #systemStatus {
+      font-size: 18px; /* Kleinere Schriftgröße */
+      margin-bottom: 30px; /* Mehr Abstand nach unten */
+      padding: 8px; /* Weniger Padding für eine kompaktere Darstellung */
+    }
+    
     .online { background-color: #d4edda; color: #155724; border-color: #c3e6cb; }
     .offline { background-color: #f8d7da; color: #721c24; border-color: #f5c6cb; }
     .on { background-color: #cce5ff; color: #004085; border-color: #b8daff; }
