--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
       margin-bottom: 50px; /* Mehr Abstand nach unten */
       padding: 8px; /* Weniger Padding für eine kompaktere Darstellung */
     }
+
+    #powerStatus {
+      font-size: 20px; /* Schriftgröße */
+      margin-bottom: 20px; /* Abstand nach unten */
+      padding: 8px; /* Weniger Padding für eine kompaktere Darstellung */
+    }
     
     .online { background-color: #d4edda; color: #155724; border-color: #c3e6cb; }
     .offline { background-color: #f8d7da; color: #721c24; border-color: #f5c6cb; }
